# web_example.rs

./: Cargo.toml  db_up.sql
src/: main.rs
templates/: index.hbs
