[package]
name = "quickweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.9", features = [ "runtime-tokio-native-tls", "macros", "sqlite" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[dependencies.rocket]
version = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = [ "handlebars" ]

